syntax = "proto3";

package order;

import "google/protobuf/empty.proto";
import "order/common.proto";

message CreateOrderItemRequest {
  int32 product_id = 1;
  int32 quantity = 2;
  int32 price = 3;
}

message UpdateOrderItemRequest {
  int32 order_item_id = 1;
  int32 product_id = 2;
  int32 quantity = 3;
  int32 price = 4;
}

message CreateOrderRequest {
  int32 user_id = 1;
  repeated CreateOrderItemRequest items = 2;
}

message UpdateOrderRequest {
  int32 order_id = 1;
  int32 user_id = 2;
  repeated UpdateOrderItemRequest items = 3;
}

message ApiResponseOrderDelete {
  string status = 1;
  string message = 2;
}

message ApiResponseOrderAll {
  string status = 1;
  string message = 2;
}

service OrderCommandService {
  rpc Create(CreateOrderRequest) returns (order.ApiResponseOrder);
  rpc Update(UpdateOrderRequest) returns (order.ApiResponseOrder);

  rpc Trashed(order.FindByIdOrderRequest)
      returns (order.ApiResponseOrderDeleteAt);
  rpc Restore(order.FindByIdOrderRequest)
      returns (order.ApiResponseOrderDeleteAt);
  rpc DeleteOrderPermanent(order.FindByIdOrderRequest)
      returns (order.ApiResponseOrderDelete);

  rpc RestoreAllOrder(google.protobuf.Empty) returns (ApiResponseOrderAll);
  rpc DeleteAllOrder(google.protobuf.Empty) returns (ApiResponseOrderAll);
}